--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                         <button class="vote-btn" data-choice="b">Choose</button>
                     </div>
                 </div>
+                <div id="vote-result" class="vote-result hidden">
+                    <p class="result-title">Global Rankings</p>
+                    <div class="result-info">
+                        <span id="result-a-rank"></span>
+                        <span id="result-b-rank"></span>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -59,27 +66,6 @@
             </div>
             <div id="global-rankings" class="rankings-list"></div>
         </section>
-    </div>
-
-    <!-- Vote Result Modal -->
-    <div id="vote-result-modal" class="modal">
-        <div class="modal-content">
-            <h3 id="result-message"></h3>
-            <div class="result-comparison">
-                <div class="result-album">
-                    <img id="result-winner-img" src="" alt="">
-                    <p id="result-winner-name"></p>
-                    <p class="result-rank" id="result-winner-rank"></p>
-                </div>
-                <div class="vs-small">vs</div>
-                <div class="result-album">
-                    <img id="result-loser-img" src="" alt="">
-                    <p id="result-loser-name"></p>
-                    <p class="result-rank" id="result-loser-rank"></p>
-                </div>
-            </div>
-            <button id="close-result" class="modal-btn">Next Matchup →</button>
-        </div>
     </div>
 
     <script type="module" src="js/app.js"></script>
