rankings are sharable

--- a/index.html
+++ b/index.html
@@ -28,21 +28,19 @@
                     <div class="album-card" id="album-a">
                         <img src="" alt="" id="album-a-img">
                         <h3 id="album-a-name"></h3>
+                        <p class="global-rank hidden" id="rank-a"></p>
                         <button class="vote-btn" data-choice="a">Choose</button>
                     </div>
                     <div class="vs">VS</div>
                     <div class="album-card" id="album-b">
                         <img src="" alt="" id="album-b-img">
                         <h3 id="album-b-name"></h3>
+                        <p class="global-rank hidden" id="rank-b"></p>
                         <button class="vote-btn" data-choice="b">Choose</button>
                     </div>
                 </div>
-                <div id="vote-result" class="vote-result hidden">
-                    <p class="result-title">Global Rankings</p>
-                    <div class="result-info">
-                        <span id="result-a-rank"></span>
-                        <span id="result-b-rank"></span>
-                    </div>
+                <div id="next-matchup-btn-container" class="hidden">
+                    <button id="next-matchup-btn" class="next-btn">Next Matchup →</button>
                 </div>
             </div>
         </section>
