mobile optomize + fix page rankings

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- My Rankings Section -->
         <section id="my-rankings-section" class="section">
-            <h2>Your Personal Rankings</h2>
+            <h2 id="rankings-title">Your Personal Rankings</h2>
             <div class="share-link">
                 <p>Share your rankings:</p>
                 <input type="text" id="share-url" readonly>
