--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taylor Swift Album ELO Rankings</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💜</text></svg>">
+
+    <!-- Open Graph meta tags for link previews -->
+    <meta property="og:title" content="Taylor Swift Album ELO Rankings">
+    <meta property="og:description" content="Vote on album matchups and see how your rankings compare to the crowd!">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://daphnehanse11.github.io/taylor-swift-elo/">
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Taylor Swift Album ELO Rankings">
+    <meta name="twitter:description" content="Vote on album matchups and see how your rankings compare to the crowd!">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
