style and formatting

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <p>Share your rankings:</p>
                 <input type="text" id="share-url" readonly>
                 <button id="copy-link">Copy Link</button>
+                <button id="reset-rankings" class="reset-btn">🔄 Reset Rankings</button>
             </div>
             <div id="personal-rankings" class="rankings-list"></div>
         </section>
