--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <meta property="og:description" content="Vote on album matchups and see how your rankings compare to the crowd!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://daphnehanse11.github.io/taylor-swift-elo/">
+    <meta property="og:image" content="https://daphnehanse11.github.io/taylor-swift-elo/2.png">
 
     <!-- Twitter Card meta tags -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Taylor Swift Album ELO Rankings">
     <meta name="twitter:description" content="Vote on album matchups and see how your rankings compare to the crowd!">
+    <meta name="twitter:image" content="https://daphnehanse11.github.io/taylor-swift-elo/2.png">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,7 +31,6 @@
                 <button id="vote-tab" class="tab-btn">Vote</button>
                 <button id="my-rankings-tab" class="tab-btn">My Rankings</button>
                 <button id="global-rankings-tab" class="tab-btn">Global Rankings</button>
-                <button id="about-tab" class="tab-btn">About</button>
             </nav>
         </header>
 
@@ -40,6 +41,9 @@
             </div>
             <div class="matchup">
                 <h2>Which album is better?</h2>
+                <div id="next-matchup-btn-container" class="hidden">
+                    <button id="next-matchup-btn" class="next-btn">Next Matchup →</button>
+                </div>
                 <div class="albums">
                     <div class="album-card" id="album-a">
                         <img src="" alt="" id="album-a-img">
@@ -54,9 +58,6 @@
                         <p class="global-rank hidden" id="rank-b"></p>
                         <button class="vote-btn" data-choice="b">Choose</button>
                     </div>
-                </div>
-                <div id="next-matchup-btn-container" class="hidden">
-                    <button id="next-matchup-btn" class="next-btn">Next Matchup →</button>
                 </div>
             </div>
         </section>
@@ -83,53 +84,6 @@
             <div id="global-rankings" class="rankings-list"></div>
         </section>
 
-        <!-- About Section -->
-        <section id="about-section" class="section">
-            <h2>How It Works</h2>
-            <div class="about-content">
-                <div class="about-card">
-                    <h3>🎯 What is ELO?</h3>
-                    <p>ELO is a rating system originally created for chess. When two items compete, the winner gains points and the loser loses points. The amount depends on their relative rankings:</p>
-                    <ul>
-                        <li>If a lower-ranked album beats a higher-ranked one, it gains more points (upset!)</li>
-                        <li>If the favorite wins, fewer points change hands</li>
-                        <li>All albums start at 1500 ELO</li>
-                    </ul>
-                </div>
-
-                <div class="about-card">
-                    <h3>💜 How to Use This Site</h3>
-                    <ol>
-                        <li><strong>Vote:</strong> Choose between two albums. Your choice updates your personal rankings.</li>
-                        <li><strong>My Rankings:</strong> See your personal album rankings based on your votes. Share the link with friends!</li>
-                        <li><strong>Global Rankings:</strong> See the consensus from all users combined.</li>
-                        <li><strong>Reset:</strong> Start over anytime - your previous votes stay in global rankings.</li>
-                    </ol>
-                </div>
-
-                <div class="about-card">
-                    <h3>✨ Features</h3>
-                    <ul>
-                        <li><strong>No login required</strong> - We generate an anonymous ID for you</li>
-                        <li><strong>Shareable rankings</strong> - Copy your link and share your hot takes</li>
-                        <li><strong>Real-time updates</strong> - Global rankings update as people vote</li>
-                        <li><strong>Mobile-friendly</strong> - Perfect for voting on the go</li>
-                    </ul>
-                </div>
-
-                <div class="about-card">
-                    <h3>🔢 The Math</h3>
-                    <p>Each matchup uses this formula:</p>
-                    <p class="formula"><strong>New Rating = Old Rating + 32 × (Actual - Expected)</strong></p>
-                    <p>Where "Expected" is calculated based on the rating difference between the two albums. The bigger the rating gap, the more certain we are about who "should" win!</p>
-                </div>
-
-                <div class="about-footer">
-                    <p>Made with 💜 for Swifties</p>
-                    <p class="small-text">Data stored locally and in Firebase. Your votes are anonymous.</p>
-                </div>
-            </div>
-        </section>
     </div>
 
     <script type="module" src="js/app.js"></script>
