buy me a coffee

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
 
     </div>
 
+    <footer class="support-footer">
+        <p>Help keep this site running! ☕️ <a href="https://buymeacoffee.com/daphnehansell" target="_blank">Buy me a coffee</a> to support database costs</p>
+    </footer>
+
     <script type="module" src="js/app.js"></script>
 </body>
 </html>
